--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body {
-  color: #ffffff;
+  background-color: #fff;
+  color: #212121;
 }
 
 /* Основной цвет текста #212121 */
@@ -12,6 +13,16 @@ body {
 
 /* акцент #2196F3 */
 
-/* акцент ховера #188CE8; */
+/* акцент ховера #188CE8 */
 
 /* Цвет футера #2F303A */
+
+/* вторичный цвет фона #F5F4FA */
+
+.logo {
+  color: #000000;
+}
+
+.logo-1 {
+  color: #2196f3;
+}
