--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body {
 
 /* вторичный цвет фона #F5F4FA */
 
-/*Стилизация логотипа*/
+/*Стилизация header*/
 .logo {
   color: #000000;
 }
@@ -35,8 +35,6 @@ body {
 .logo-second {
   color: #2196f3;
 }
-
-/* Header */
 
 .site-nav .link {
   color: #212121;
@@ -54,4 +52,19 @@ body {
 .auth-nav .link:hover,
 .auth-nav .link:focus {
   color: #2196f3;
+}
+
+/* Герой */
+
+.hero-item {
+  color: #ffffff;
+}
+
+.modal-btn {
+  background-color: #2196f3;
+  color: #ffffff;
+}
+
+.modal-btn:hover {
+  background-color: #188ce8;
 }
