--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ body {
 
 .site-nav .link:hover,
 .site-nav .link:focus {
-  color: #2196f3;
+  color: var(--accent-color);
 }
 
 .auth-nav .link {
@@ -46,22 +46,22 @@ body {
 
 .auth-nav .link:hover,
 .auth-nav .link:focus {
-  color: #2196f3;
+  color: var(--accent-color);
 }
 
 /* Hero */
 
 .hero-item {
-  color: #ffffff;
+  color: var(--primary-white-color);
 }
 
 .modal-btn {
-  background-color: #2196f3;
-  color: #ffffff;
+  background-color: var(--accent-color);
+  color: var(--primary-white-color);
 }
 
 .modal-btn:hover {
-  background-color: #188ce8;
+  background-color: var(--secondary-accent-color);
 }
 
 /* Main */
@@ -76,4 +76,20 @@ body {
 
 .advantages-list .title {
   color: var(--primary-text-color);
+}
+
+.decoration {
+  color: var(--primary-title-color);
+}
+
+/*  Working*/
+
+.working-list-item {
+  background-color: var(--primary-bcg-color);
+  color: var(--primary-white-color);
+}
+/* Our team */
+
+.team-title-position {
+  color: var(--primary-title-color);
 }
