--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,6 @@ body {
 
 .working-list-item {
   background-color: var(--primary-bcg-color);
-  color: var(--primary-white-color);
 }
 
 /* Our team */
@@ -98,6 +97,25 @@ body {
 
 /* footer */
 
-.icon {
-  color: #ffffff;
+.footer-section {
+  background-color: var(--primary-bcg-color);
+  color: var();
+}
+
+.footer-section .logo {
+  color: var(--primary-white-color);
+}
+.footer {
+  color: var(--accent-color);
+}
+
+.adress-list .adress-list-item {
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.adress-list .adress-list-item-direction {
+  color: var(--primary-white-color);
+}
+.footer-section .title {
+  color: var(--primary-white-color);
 }
