--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,9 @@ body {
 .site-nav .link {
   color: var(--primary-text-color);
 }
+.site-nav .link.current {
+  color: var(--accent-color);
+}
 
 .site-nav .link:hover,
 .site-nav .link:focus {
