--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,7 @@ body {
 
 .working-list-item {
   background-color: var(--primary-bcg-color);
+  color: var(--primary-white-color);
 }
 
 /* Our team */
