--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
 body {
   background-color: var(--primary-white-color);
   color: var(--primary-text-color);
+  font-family: "Roboto", sans-serif;
 }
 
 .link {
@@ -24,14 +25,23 @@ body {
 /* header */
 
 .logo {
+  font-family: "Raleway", sans-serif;
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
   color: #000000;
 }
 
-.logo-second {
+.logo .header {
   color: var(--accent-color);
 }
 
-.site-nav .link {
+.site-nav .site-nav-list {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
   color: var(--primary-text-color);
 }
 .site-nav .link.current {
@@ -43,8 +53,12 @@ body {
   color: var(--accent-color);
 }
 
-.auth-nav .link {
-  color: #757575;
+.auth-nav .auth-nav-list {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--primary-title-color);
 }
 
 .auth-nav .link:hover,
