--- a/css/style.css
+++ b/css/style.css
@@ -157,10 +157,11 @@ body {
 
 .mail,
 .phone {
+  font-style: normal;
   font-size: 14px;
   line-height: 1.71px;
   letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
+  color: var(--primary-title-color);
 }
 
 .mail:hover,
@@ -174,6 +175,7 @@ body {
 }
 
 .map {
+  font-style: normal;
   font-size: 14px;
   line-height: 1.71px;
   letter-spacing: 0.03em;
